header and spacing updates, fix search hide

--- a/style.css
+++ b/style.css
@@ -242,3 +242,7 @@ a:hover .topic-card {
     border-radius: 5px;
     font-size: 16px;
 }
+
+h1.title {
+    font-size: 2.25em;
+}
